fix menu on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1565,7 +1565,7 @@ body {
 	}
 
 	.header_menu_wrap {
-	    padding: 20px 0;
+	    padding: 20px 0 10px 0;
 	    -webkit-box-orient: horizontal;
 	    -webkit-box-direction: normal;
 	        -ms-flex-direction: row;
@@ -1599,6 +1599,7 @@ body {
 
 	.header_menu_item:last-child {
 		margin-bottom: 0;
+		margin-top: 10px;
 	}
 
 	#about_company {
@@ -1997,6 +1998,10 @@ body {
 		        order: 2;
 	}
 
+	.header_menu_item:last-child {
+		margin-top: 0;
+	}
+
 	.header_menu {
 		display: block;
 		position: fixed;
@@ -2044,6 +2049,7 @@ body {
     	-webkit-box-ordinal-group: 4;
     	    -ms-flex-order: 3;
     	        order: 3;
+    	margin-top: 0;
 	}
 
 	.header_button {
